--- a/sections/customejewwlry.liquid
+++ b/sections/customejewwlry.liquid
@@ -176,48 +176,49 @@
   
   
   
+
     new Splide("#first-slider-{{section.id}}",{
       type: 'loop',
       pagination : false,
       drag   : 'free',
       cover      : true,
       gap       : 20,
-      perMove:1.2,
-      focus  : 'left',
+      perMove:1,
+      focus  : 'right',
       interval: 4000,
        autoScroll: {
-        speed: 2,
+        speed: 1,
       },
       breakpoints : {
   
         '600': {
-          perPage: 1.3,
+          perPage: 1,
           autoScroll: {
-            speed: 0,
+            speed: 0.5,
           },
         },
         '960': {
           perPage: 2,
           autoScroll: {
-            speed: 0,
+            speed: 0.5,
           },
         },
         '1020': {
           perPage: 3,
           autoScroll: {
-            speed: 0,
+            speed: 0.5,
           },
         },
         '1333': {
           perPage: 4,
           autoScroll: {
-            speed: 0.09,
+            speed: 0.5,
           },
         },
         '1500': {
           perPage: 4,
           autoScroll: {
-            speed: 0.09,
+            speed: 0.5,
           },
         },
         '1920': {
@@ -227,7 +228,7 @@
           },
         }
     },
-    }).mount();
+    }).mount(window.splide.Extensions);
   
   </script>
 
