--- a/sections/customeyellowbreadbannar.liquid
+++ b/sections/customeyellowbreadbannar.liquid
@@ -179,5 +179,11 @@
         cursor: pointer;
         color:{{ section.settings.t-color }}
     }
-
+    @media screen and (max-width:767px) {
+        .blog-title h4 {
+           
+            font-size: 52px;
+         
+        }
+    }
 </style>
