prudct brad bannar update

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -20,7 +20,7 @@
                     <path d="M1 1L5 5L1 9" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </div>
-                <a>{{ product.title }}</a>
+                <a href="/collections/all">{{ product.title }}</a>
             </div>
         </div>
     </div>
