footer height update

--- a/assets/style.css
+++ b/assets/style.css
@@ -1514,8 +1514,13 @@ div#suggeationlist {
   padding: 60px 0;
 }
 .footer-wrapper .footer-logo {
-  margin: 80px 0 24px 0;
+  margin: 40px 0 24px 0;
   text-align: center;
+}
+@media (min-width: 768px) {
+  .footer-wrapper .footer-logo {
+    margin: 0px 0 24px 0;
+  }
 }
 .footer-wrapper .footer-logo img {
   display: inline-block;
@@ -1540,7 +1545,7 @@ div#suggeationlist {
 }
 
 .footer-right-menu {
-  margin: 50px 0 42px 0;
+  margin: 50px 0 0px 0;
 }
 .footer-right-menu .sinel-menu-item h6 {
   font-family: "GT Super Txt Trial";
