--- a/sections/customefooter.liquid
+++ b/sections/customefooter.liquid
@@ -23,7 +23,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4 d-md-flex align-items-center justify-content-center">
               <div class="footer-logo-area">
                 <div class="footer-logo">
                   <img src="{{section.settings.img | img_url: '' }}" alt="">
