--- a/assets/style.css
+++ b/assets/style.css
@@ -888,7 +888,17 @@ div#suggeationlist {
 }
 @media (min-width: 992px) {
   .bannar-wrapper .bannar-shape-1 img {
-    width: auto;
+    width: 170px;
+  }
+}
+@media (min-width: 1200px) {
+  .bannar-wrapper .bannar-shape-1 img {
+    width: 190px;
+  }
+}
+@media (min-width: 1400px) {
+  .bannar-wrapper .bannar-shape-1 img {
+    width: 212px;
   }
 }
 @media (min-width: 250px) {
@@ -957,7 +967,17 @@ div#suggeationlist {
 }
 @media (min-width: 992px) {
   .bannar-wrapper .bannar-shape-2 img {
-    width: auto;
+    width: 150px;
+  }
+}
+@media (min-width: 1200px) {
+  .bannar-wrapper .bannar-shape-2 img {
+    width: 170px;
+  }
+}
+@media (min-width: 1400px) {
+  .bannar-wrapper .bannar-shape-2 img {
+    width: 186px;
   }
 }
 
@@ -2382,6 +2402,35 @@ ul.splide__pagination.splide__pagination--ltr li .splide__pagination__page.is-ac
 }
 html.js {
   padding: 0 !important;
+}
+
+.page-wrapper-c .csection-header h1 {
+  margin: 60px 0 60px 0;
+  font-family: "GT Super Txt Trial";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 60px;
+}
+
+.page-content p {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  margin: 15px 0;
+}
+.page-content strong {
+  font-size: 28px;
+  margin: 10px 0;
+}
+.page-content a {
+  text-decoration: underline;
+}
+
+.general-all-page {
+  margin-bottom: 200px;
 }
 
 .pt-100 {
