--- a/sections/page-template.liquid
+++ b/sections/page-template.liquid
@@ -1,19 +1,22 @@
-<div class="page-width">
-  <div class="grid">
-    <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
-      <div class="section-header text-center">
-        <h1>{{ page.title }}</h1>
-      </div>
 
-      {% if page.content.size > 0 %}
-        <div class="rte">
-          {{ page.content }}
+<div class="">
+ <div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="page-wrapper-c">
+        <div class="csection-header text-center">
+          <h1>{{ page.title }}</h1>
         </div>
-      {% endif %}
+        {% if page.content.size > 0 %}
+          <div class="page-content">
+            {{ page.content }}
+          </div>
+        {% endif %}
+      </div>
+    </div>
     </div>
   </div>
 </div>
-
 
 
 {% schema %}
