Contact margin bottom

--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -1,4 +1,4 @@
-<div class="loging-wrapper  pb-180">
+<div class="loging-wrapper magring-minous  pb-180">
   <div class="container">
     <div class="row">
      <div class="col-11 col-md-8 offset-md-2 offset-1">
