--- a/templates/customers/reset_password.liquid
+++ b/templates/customers/reset_password.liquid
@@ -1,6 +1,10 @@
-<div class="page-width">
+<div class="loging-wrapper magring-minous  pb-180">
+  <div class="container">
+    <div class="row">
+     <div class="col-11 col-md-8 offset-md-2 offset-1">
+      <div class="card-common-inputclass">
   <div class="grid">
-    <div class="grid__item medium-up--one-half medium-up--push-one-quarter">
+    <div class="">
       <div class="section-header">
         <div class="form-vertical">
           {% form 'reset_customer_password' %}
@@ -20,12 +24,18 @@
 
             <label for="PasswordConfirmation">{{ 'customer.reset_password.password_confirm' | t }}</label>
             <input type="password" value="" name="customer[password_confirmation]" id="PasswordConfirmation" class="{% if form.errors contains 'password_confirmation' %} input--error{% endif %}">
-
+            <div class="login-butoon">
             <input type="submit" class="btn text-center" value="{{ 'customer.reset_password.submit' | t }}">
+            <div>
           {% endform %}
         </div>
 
       </div>
     </div>
   </div>
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
