--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -1,5 +1,9 @@
-<div class="page-width">
-  <div class="section-header text-center">
+<div class="general-all-page">
+  <div class="container">
+   <div class="row">
+     <div class="col-md-12">
+       <div class="page-wrapper-c">
+  <div class="csection-header text-center pt-100">
     <h1>{{ 'customer.account.title' | t }}</h1>
     {{ 'layout.customer.log_out' | t | customer_logout_link }}
   </div>
@@ -60,4 +64,8 @@
       <p><a href="{{ routes.account_addresses_url }}" class="btn btn--small">{{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})</a></p>
     </div>
   </div>
+</div>
+</div>
+</div>
+</div>
 </div>
