--- a/templates/customers/activate_account.liquid
+++ b/templates/customers/activate_account.liquid
@@ -1,6 +1,10 @@
-<div class="page-width text-center">
+<div class="loging-wrapper magring-minous  pb-180">
+  <div class="container">
+    <div class="row">
+     <div class="col-11 col-md-8 offset-md-2 offset-1">
+      <div class="card-common-inputclass">
   <div class="grid">
-    <div class="grid__item medium-up--one-half medium-up--push-one-quarter">
+    <div class="cutome-class">
       <div class="section-header">
         <h1>{{ 'customer.activate_account.title' | t }}</h1>
         <p>{{ 'customer.activate_account.subtext' | t }}</p>
@@ -27,4 +31,8 @@
       </div>
     </div>
   </div>
+</div>
+</div>
+</div>
+</div>
 </div>
