--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -22,19 +22,19 @@
 
 
     <link rel="preload" href="{{ 'theme.css' | asset_url }}" as="style">
-    <link rel="stylesheet" href="{{ 'bootstrap.min.css' | asset_url }}" >
-    <link rel="stylesheet" href="{{ 'splide.min.css' | asset_url }}" >
-    <link rel="stylesheet" href="{{ 'allextra.css' | asset_url }}" >
-    <link rel="stylesheet" href="{{ 'mCustomScrollbar.min.css' | asset_url }}" >
-    <link rel="stylesheet" href="{{ 'style.css' | asset_url }}" >
+    <link rel="stylesheet" href="{{ 'bootstrap.min.css' | asset_url }}" defer="defer" >
+    <link rel="stylesheet" href="{{ 'splide.min.css' | asset_url }}"  defer="defer">
+    <link rel="stylesheet" href="{{ 'allextra.css' | asset_url }}"  defer="defer">
+    <link rel="stylesheet" href="{{ 'mCustomScrollbar.min.css' | asset_url }}" defer="defer" >
+    <link rel="stylesheet" href="{{ 'style.css' | asset_url }}" defer="defer" >
+
+    <script src="{{ 'jquery-3.5.1.slim.min.js' | asset_url }}" ></script>
 
 
-
-
-    <script src="{{ 'splide.js' | asset_url }}"></script> 
-    <script src="{{ 'lazysizes.min.js' | asset_url }}" ></script>
+    <script src="{{ 'splide.js' | asset_url }}" ></script> 
+    <script src="{{ 'lazysizes.min.js' | asset_url }}" defer="defer" ></script>
     
-    <link rel="preload" href="{{ 'theme.js' | asset_url }}" as="script">
+    <link rel="preload" href="{{ 'theme.js' | asset_url }}" as="script" async>
   
     {%- if canonical_url != blank -%}
       <link rel="canonical" href="{{ canonical_url }}">
@@ -85,11 +85,7 @@
         link.dispatchEvent(new Event('load'));
       }
     </script>
-    <script src="{{ 'jquery-3.5.1.slim.min.js' | asset_url }}" ></script>
-    <script src="{{ 'bootstrap.bundle.min.js' | asset_url }}" ></script>
-    <script src="{{ 'mCustomScrollbar.min.js' | asset_url }}" ></script>
-   
-    <script src="{{ 'main.js' | asset_url }}"></script> 
+
     <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}" type="text/css" media="print" onload="this.media='all';onLoadStylesheet()">
   
 
@@ -245,7 +241,11 @@
 
   {% include 'homemodal' %}
 
-
+ 
+  <script src="{{ 'bootstrap.bundle.min.js' | asset_url }}"  defer="defer"></script>
+  <script src="{{ 'mCustomScrollbar.min.js' | asset_url }}" defer="defer" ></script>
+ 
+  <script src="{{ 'main.js' | asset_url }}" defer="defer"></script> 
 
 
 
