update with css fixing

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="{{ 'splide.min.css' | asset_url }}"  defer="defer">
     <link rel="stylesheet" href="{{ 'allextra.css' | asset_url }}"  defer="defer">
     <link rel="stylesheet" href="{{ 'mCustomScrollbar.min.css' | asset_url }}" defer="defer" >
-    <link rel="stylesheet" href="{{ 'style.css' | asset_url }}" defer="defer" >
+    <link rel="stylesheet" href="{{ 'style.css' | asset_url }}"  >
 
     <script src="{{ 'jquery-3.5.1.slim.min.js' | asset_url }}" ></script>
 
