popup code fixing

--- a/snippets/homemodal.liquid
+++ b/snippets/homemodal.liquid
@@ -10,7 +10,7 @@
             <path d="M26.75 26.75L13.25 13.25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             <rect x="1" y="1" width="38" height="38" stroke="black" stroke-width="2"/>
             </svg></span>
-      </div>.proudct-area-shap{
+      </div>.
     
         <div class="modal-content-c">
          <h5>{{ settings.menu1 }}</h5>
