commit add preload style

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
     <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     <link rel="preconnect" href="https://monorail-edge.shopifysvc.com">
-    <style>
+    <style rel="preload" as="style">
       @font-face {
         font-family: 'Jost';
         src: url('jost-v14-latin-regular.eot');
