--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -256,7 +256,7 @@
   <script src="{{ 'jquery-3.5.1.slim.min.js' | asset_url }}" defer="defer"></script>
 
 
-  <script src="{{ 'splide.js' | asset_url }}" ></script> 
+  <script rel="preload" src="{{ 'splide.js' | asset_url }}" defer="defer" ></script> 
   <script src="{{ 'lazysizes.min.js' | asset_url }}" defer="defer" ></script>
   <script src="{{ 'bootstrap.bundle.min.js' | asset_url }}"  defer="defer"></script>
   <script src="{{ 'mCustomScrollbar.min.js' | asset_url }}" defer="defer" ></script>
