all style update and z -index fixing

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -29,7 +29,8 @@
     <link rel="stylesheet" href="{{ 'style.css' | asset_url }}"  defer="defer" >
 
 
-    
+    <script src="{{ 'jquery-3.5.1.slim.min.js' | asset_url }}" ></script>
+    <script  src="{{ 'splide.js' | asset_url }}" ></script> 
     <link rel="preload" href="{{ 'theme.js' | asset_url }}" as="script" defer="defer">
   
     {%- if canonical_url != blank -%}
@@ -237,10 +238,9 @@
 
   {% include 'homemodal' %}
 
-  <script src="{{ 'jquery-3.5.1.slim.min.js' | asset_url }}" defer="defer"></script>
 
 
-  <script rel="preload" src="{{ 'splide.js' | asset_url }}" defer="defer" ></script> 
+ 
   <script src="{{ 'lazysizes.min.js' | asset_url }}" defer="defer" ></script>
   <script src="{{ 'bootstrap.bundle.min.js' | asset_url }}"  defer="defer"></script>
   <script src="{{ 'mCustomScrollbar.min.js' | asset_url }}" defer="defer" ></script>
