--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -28,8 +28,13 @@
     <link rel="stylesheet" href="{{ 'mCustomScrollbar.min.css' | asset_url }}" defer="defer" >
     <link rel="stylesheet" href="{{ 'style.css' | asset_url }}"  defer="defer" >
 
+ <script>
 
-    <script src="{{ 'jquery-3.5.1.slim.min.js' | asset_url }}" ></script>
+
+</script>
+
+
+    <script src="{{ 'jquery-3.5.1.slim.min.js' | asset_url }}" type="module" async></script>
     <script  src="{{ 'splide.js' | asset_url }}" ></script> 
     <link rel="preload" href="{{ 'theme.js' | asset_url }}" as="script" defer="defer">
   
