header grid update

--- a/sections/customeheader.liquid
+++ b/sections/customeheader.liquid
@@ -28,7 +28,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-8 col-xl-6   col-lg-5   d-flex align-items-center">
+          <div class="col-8 col-xl-5 col-xxl-5   col-lg-5   d-flex align-items-center">
 
             <div class="logo ">
               <a href="/"><img src="{{section.settings.img | img_url:''}}" alt=""></a>
@@ -94,7 +94,7 @@
            </div>
            <!-- small screan menu  end -->
            <!-- big-screan - left side bar  -->
-          <div class="col-xl-6   col-lg-7  d-flex justify-content-end align-items-center ">
+          <div class="col-xl-7 col-xxl-6   col-lg-7  d-flex justify-content-end align-items-center ">
             <div class="header-main-right-wrapper d-none d-lg-flex align-items-center ">
                 <div class="main-menu d-inline-block">
                   <ul>
