--- a/sections/customeheader.liquid
+++ b/sections/customeheader.liquid
@@ -225,7 +225,7 @@
             </div>
             <div id="suggeationlist" class="d-xl-flex justify-content-between align-items-top">
                 <div class="text-center searchplaceholder">
-                  <h2>Add you Search teram</h2> 
+                  <h2>Add you Search term</h2> 
                 </div>
             </div>
           
