bannar button fixing

--- a/sections/customebannar.liquid
+++ b/sections/customebannar.liquid
@@ -29,7 +29,7 @@
                   <h1>{{ section.settings.h1 }}</h1>
                   <p>{{ section.settings.p }}</p>
                   <div class="bannar-btn-area">
-                  <a href="{{  section.settings.url }}" class="btn">{{ section.settings.shop }}</a>
+                  <a href="{{  section.settings.link }}" class="btn">{{ section.settings.shop }}</a>
                  </div>
                </div>
          </div>
