collection template update with name

--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -93,7 +93,7 @@
               <!-- -----------wave-area----------- -->
               <div class="wave-area d-flex align-items-center justify-content-left justify-content-sm-center justify-content-md-center  justify-content-lg-between">
                   <div class="d-flex align-items-center">
-                      <h5>Products</h5>
+                      <h5 class="collection-titlae">{{ collection.title }}</h5>
                       <div class="wave-img" >
 
                         <svg xmlns="http://www.w3.org/2000/svg" width="271" height="22" viewBox="0 0 271 22" fill="none">
